# chaos-negotiator

./: .env.example  .gitignore  ARCHITECTURE.md  AZURE_MIGRATION.md  AZURE_OPENAI_SETUP.md  DASHBOARD.md  DEBUGGING.md  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT_HISTORY_FIXED.md  DEVELOPMENT.md  Dockerfile  FILE_INDEX.md  FINAL_SUBMISSION_CHECKLIST.md  GITHUB_SECRETS_SETUP.md  HACKATHON_SUBMISSION.md  HISTORY_FIX_COMPLETE.md  JUDGE_GUIDE.md  LIVE_DATA_FLOW_FIXED.md  QUICK_REFERENCE.md  README.md  SUBMISSION.md  SUBMISSION_ARCHITECTURE.md  SUBMISSION_TEXT.md  TECHNOLOGY.md  TODO.md  USER_GUIDE.md  VERIFICATION_CHECKLIST.md  debug_risk.py  demo_deployment_history.py  deployment-example.json  deployment_approvals.db  deployment_approvals.db-journal  deployment_history.db  enforcement-result-deploy-example-001.json  enforcement-result-deploy-risky-002.json  enforcement-result-deploy-safe-003.json  pyproject.toml  run_api_test.py  test_deployment_history_flow.py  test_live_data.py
.azure/: plan.md
.github/workflows/: chaos-negotiator-AutoDeployTrigger-37565b45-7960-42cc-b85c-cbe5446e2e24.yml  deploy.yml  test.yml
chaos_negotiator/: __init__.py  approval_store.py  main.py  server.py
chaos_negotiator/agent/: __init__.py  agent.py  api.py  sk_orchestrator.py
chaos_negotiator/canary/: __init__.py  models.py  orchestrator.py
chaos_negotiator/contracts/: __init__.py  contract_engine.py
chaos_negotiator/enforcement/: __init__.py  simulator.py
chaos_negotiator/mcp/: __init__.py  azure_mcp.py
chaos_negotiator/metrics/: __init__.py  opentelemetry.py  prometheus_provider.py
chaos_negotiator/models/: __init__.py  contract.py  deployment.py  outcome.py  risk.py  rollback.py
chaos_negotiator/predictors/: __init__.py  ensemble.py  history_store.py  ml_predictor.py  risk_predictor.py
chaos_negotiator/scheduler/: weight_scheduler.py
frontend/: README.md  package.json
infra/: deployment.bicep  main.bicep
scripts/: verify_deployment.py
tests/: conftest.py  test_agent.py  test_api.py  test_canary.py  test_integration.py  test_predictors.py  test_scheduler.py  test_server_security.py
(+21 files in other folders)
